Updated Occitan translation
svn path=/trunk/; revision=4440

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-21  Yannig Marchegay <yannig@marchegay.org> 
+
+	* oc.po: Updated Occitan translation
+
 2007-10-28 18:12:38  Tim Janik  <timj@gtk.org>
 
 	* oc.po: rebuilt to include strings from the latest sources and to
