--- a/po/oc.po
+++ b/po/oc.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: beast 0.7.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-19 20:16+0100\n"
-"PO-Revision-Date: 2007-12-27 14:59+0100\n"
+"PO-Revision-Date: 2008-02-20 00:11+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);"
 
 #: ../beast-gtk/bstapp.c:81
 msgid "_New"
@@ -801,7 +801,7 @@ msgstr ""
 
 #: ../beast-gtk/bstkeybindings.c:51
 msgid "Change..."
-msgstr ""
+msgstr "Modificar..."
 
 #: ../beast-gtk/bstkeybindings.c:51
 msgid "Change the currently selected key binding"
@@ -1776,7 +1776,7 @@ msgstr ""
 
 #: ../beast-gtk/bstrackitem.c:208
 msgid "Duplicate"
-msgstr ""
+msgstr "Duplicar"
 
 #: ../beast-gtk/bstrackitem.c:210
 msgid "Grow Horizontally"
@@ -2648,7 +2648,7 @@ msgstr ""
 
 #: ../beast-gtk/bstsupershell.c:182
 msgid "Tracks"
-msgstr ""
+msgstr "Pistas"
 
 #: ../beast-gtk/bstsupershell.c:182
 msgid "Tracks contain instrument definitions and parts with notes"
@@ -2668,7 +2668,7 @@ msgstr ""
 
 #: ../beast-gtk/bstsupershell.c:192
 msgid "Parts"
-msgstr ""
+msgstr "Partidas"
 
 #: ../beast-gtk/bstsupershell.c:196
 msgid "Busses"
@@ -3151,7 +3151,7 @@ msgstr ""
 
 #: ../beast-gtk/dialogs/radgets-beast.xml.h:55
 msgid "_Song"
-msgstr ""
+msgstr "_Cançon"
 
 #: ../beast-gtk/dialogs/radgets-beast.xml.h:56
 msgid "_Spatial"
@@ -6920,3 +6920,4 @@ msgstr ""
 #, c-format
 msgid "failed to add wave chunk from file \"%s\": %s"
 msgstr ""
+
