Removed bashism from mksignals.sh.
Sun Jun  8 11:19:57 2008  Stefan Westerfeld  <stefan@space.twc.de>

	* mksignals.sh: Removed bash specific syntax as suggested by Chris
	Lamb (debian bug #472659).

svn path=/trunk/; revision=4473

--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jun  8 11:19:57 2008  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* mksignals.sh: Removed bash specific syntax as suggested by Chris
+	Lamb (debian bug #472659).
+
 Wed Feb 21 03:27:02 2007  Tim Janik  <timj@gtk.org>
 
 	* birnetthread.hh: fixed up destructor ordering. added missing
