--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-11  Yannig Marchegay <yannig@marchegay.org>
+
+	* oc.po: Updated Occitan translation.
+
 2008-06-04 21:42:47  Tim Janik  <timj@gtk.org>
 
 	* it.po: updates from Michele Petrecca.
