--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jun 11 15:17:37 2008  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* NEWS: Include changes between 0.7.1 and 0.7.2.
+
 2008-06-04 23:52:21  Tim Janik  <timj@gtk.org>
 
 	* configure.in: renamed bse*sample*dir variables to be less ambiguous.
