--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jun 11 17:25:26 2008  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* data/beast.desktop.in: Improved Category entry with changes
+	from Debian. Now includes Audio, Midi and Sequencer categories.
+
 Wed Jun 11 15:17:37 2008  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* NEWS: Include changes between 0.7.1 and 0.7.2.
