--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun 12 12:28:40 2008  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* NEWS: Some fixes due to review from Tim.
+
 Wed Jun 11 17:25:26 2008  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* data/beast.desktop.in: Improved Category entry with changes
