Compile fixes for G++-4.3.
Wed Jun 11 14:04:31 2008  Stefan Westerfeld  <stefan@space.twc.de>

	* birnetsignal.hh:
	* birnetsignaltemplate.hh: Compile fixes for G++-4.3, which does not
	allow typedefs to the same name that an existing template uses.

	* birnetutils.cc:
	* tests/sorting.cc:
	* tests/strings.cc:
	* tests/threads.cc:
	* birnetmsg.cc: Compile fixes for G++-4.3: added a few standard
	includes for strcmp(), rand() and such.

Sun Jun  8 11:19:57 2008  Stefan Westerfeld  <stefan@space.twc.de>

	* mksignals.sh: Removed bash specific syntax as suggested by Chris
	Lamb (debian bug #472659).

Wed Feb 21 03:27:02 2007  Tim Janik  <timj@gtk.org>

	* birnetthread.hh: fixed up destructor ordering. added missing
	privatization of class copies. fixed memory region aliasing that
	could cause segfaults with some gcc optimizations. worked around
	ICE (GCC#30894). minor assertion optimization. added AutoLocker
	compile time assertion about structure/area sizes.

	* birnetutils.hh, birnetutils.cc: provide zintern_free() alongside
	zintern_decompress(), so the API doesn't depend on GLib.

	* tests/infotest.cc: use zintern_free().

Sun Feb 18 03:00:54 2007  Tim Janik  <timj@gtk.org>

	* birnetcdefs.h: if LLONG_MAX isn't provided by gcc's limits.h despite
	C99/GNU_SOURCE, fallback to define *INT64* constants via LONG_LONG_MAX,
	which is provided by all 3.0+ gcc versions.

Wed Feb 14 23:58:43 2007  Tim Janik  <timj@gtk.org>

	* birnetcdefs.h: unconditionally include C99 headers limits.h and float.h.
	provide UINT64_MAX, INT64_MIN, INT64_MAX if the system doesn't.

	* birnetutils.cc: assert working implementations of the various limits
	and constants introduced by limits.h and float.h.

Fri Feb  9 21:13:21 2007  Tim Janik  <timj@gtk.org>

	* configure.inc, Makefile.am, birnetconfig.h: define BIRNET_SYSVAL_*
	for POLL constants. 

	* tests/systest.cc: check POLL constants.

Fri Feb  9 18:27:27 2007  Tim Janik  <timj@gtk.org>

	* configure.inc, Makefile.am, birnetconfig.h: defin

--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,16 @@
+Wed Jun 11 14:04:31 2008  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* birnetsignal.hh:
+	* birnetsignaltemplate.hh: Compile fixes for G++-4.3, which does not
+	allow typedefs to the same name that an existing template uses.
+
+	* birnetutils.cc:
+	* tests/sorting.cc:
+	* tests/strings.cc:
+	* tests/threads.cc:
+	* birnetmsg.cc: Compile fixes for G++-4.3: added a few standard
+	includes for strcmp(), rand() and such.
+
 Sun Jun  8 11:19:57 2008  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* mksignals.sh: Removed bash specific syntax as suggested by Chris
