Compile fixes for G++-4.3.
Wed Jun 11 14:04:31 2008  Stefan Westerfeld  <stefan@space.twc.de>

	* bsesequencer.cc:
	* tests/firhandle.cc:
	* tests/resamplehandle.cc:
	* tests/filtertest.cc:
	* bseprocidl.cc:
	* bseloader-guspatch.cc:
	* bseresamplerimpl.hh: Compile fixes for G++-4.3: Added a few standard
	includes.

	* bsecxxplugin.hh: Compile fixes for G++-4.3: Template specializations
	can not have a storage class.

Thu Nov 15 23:44:54 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* zintern/Makefile.am:
	* zintern/wave-mono.bse: Remove obsolete wave-mono replay network.

Mon Nov  5 18:23:27 2007  Stefan Westerfeld  <stefan@space.twc.de>

	Support various play-types in bse, bug #433431.

	* bsewaveosc.[hc]: Added done output (inverse gate), which makes it
	easy to use only the wave oscillator without adsr envelope in an
	instrument.

	* zintern/Makefile.am:
	* zintern/plain-wave-[12].bse:
	* zintern/adsr-wave-[12].bse: Add zintern mono/stereo version for
	replaying samples with adsr envelope, and zintern mono/stereo bse file
	for replaying waves without envelope (for drum samples). Pitch bend
	is +/- 200 cent exponential, replay volume compatible to beast-0.7.1.

	* bsetrack.c: Use plain-wave-[12] and adsr-wave-[12] depending on
	play-type xinfo of the bsewave file.

Mon Nov 12 21:00:10 2007  Stefan Westerfeld  <stefan@space.twc.de>

	Fix module reset when user presses play again, bug #336766.

	* bseproject.c (bse_project_stop_playback): When this method is
	called, we need to dismiss the contexts of the BseSuper classes
	we previously created in bse_project_start_playback.

Mon Nov  5 18:54:39 2007  Stefan Westerfeld  <stefan@space.twc.de>

	Added necessary code for "fine-tune" xinfo, bug #450490.

	* bsemathsignal.[hc]: Implemented bse_cent_tune(), which is similar to
	bse_cent_tune_fast(), but accepts arbitary doubles as input because it
	doesn't use a table internally.

	* tests/misctests.cc: Added test for bse_cent_tune().

	* gsldatahandle.[hc]: Implement

--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,17 @@
+Wed Jun 11 14:04:31 2008  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsesequencer.cc:
+	* tests/firhandle.cc:
+	* tests/resamplehandle.cc:
+	* tests/filtertest.cc:
+	* bseprocidl.cc:
+	* bseloader-guspatch.cc:
+	* bseresamplerimpl.hh: Compile fixes for G++-4.3: Added a few standard
+	includes.
+
+	* bsecxxplugin.hh: Compile fixes for G++-4.3: Template specializations
+	can not have a storage class.
+
 Thu Nov 15 23:44:54 2007  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* zintern/Makefile.am:
