--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sat Apr 11 10:50:51 2009  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsemidifile.c: Fixed control signal and pitch bend midi import.
+	Fixes #574242 - MIDI import doesn't import pitch bend and control signals
+
 Thu Mar 19 16:40:17 2009  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* gsldatahandle-vorbis.c: Modified the vfile read function so that no
