--- a/po/sl.po
+++ b/po/sl.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: beast master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.openedhand.com/enter_bug.cgi?product=Dates&component=General\n"
 "POT-Creation-Date: 2009-09-19 16:02+0000\n"
-"PO-Revision-Date: 2010-02-18 11:07+0100\n"
-"Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
+"PO-Revision-Date: 2010-02-19 09:18+0100\n"
+"Last-Translator: Andrej Žnidaršič <andrej.znidarsic@gmail.com>\n"
 "Language-Team: Slovenian GNOME Translation Team <gnome-si@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -498,9 +498,8 @@ msgid "Draw Values"
 msgstr "Nariši vrednosti"
 
 #: ../beast-gtk/bstdbmeter.c:763
-#, fuzzy
 msgid "Adjust whether to draw dB values instead of lines"
-msgstr "Prilagoditev ali naj bodo narisane vrednosti v dB namesto linearnega merila"
+msgstr "Prilagodit ali naj bodo narisane vrednosti v dB namesto vrstic"
 
 #: ../beast-gtk/bstdbmeter.c:766
 #: ../beast-gtk/bstdbmeter.c:1061
@@ -519,9 +518,8 @@ msgid "Justify"
 msgstr "Poravnava"
 
 #: ../beast-gtk/bstdbmeter.c:769
-#, fuzzy
 msgid "Adjust relative alignment of the values or bars to be drawn"
-msgstr "Prilagodi relativno poravnavo vrednosti stolpcev za risanje"
+msgstr "Prilagodi relativno poravnavo vrednosti stolpcev za izris"
 
 #: ../beast-gtk/bsteventrollctrl.c:57
 #: ../beast-gtk/bstpianorollctrl.c:57
@@ -961,9 +959,8 @@ msgstr "Datoteke RC"
 
 #. show splash images
 #: ../beast-gtk/bstmain.c:158
-#, fuzzy
 msgid "Splash Image"
-msgstr "Brez slike"
+msgstr "Predstavitvena slika"
 
 #. start BSE core and connect
 #: ../beast-gtk/bstmain.c:170
@@ -1405,7 +1402,7 @@ msgstr "Prilagoditev števila vrstic med vsako osenčeno vrstico"
 #. movement
 #: ../beast-gtk/bstpatternctrl.c:312
 msgid "Move focus to the next cell (up/left/right/down according to configuration)"
-msgstr ""
+msgstr "Premakne izbrano na naslednjo celico (navzgor/levo/desno/navzdol glede na nastavitev)"
 
 #: ../beast-gtk/bstpatternctrl.c:313
 #, fuzzy
@@ -1418,30 +1415,28 @@ msgid "Move focus cell to the left"
 msgstr "Premakni trenutni zavihek na levo"
 
 #: ../beast-gtk/bstpatternctrl.c:315
-#, fuzzy
 msgid "Move focus cell to the right"
-msgstr "Premakni trenutni zavihek na desno"
+msgstr "Premakni izbrano celico desno"
 
 #: ../beast-gtk/bstpatternctrl.c:316
-#, fuzzy
 msgid "Move focus cell downwards"
-msgstr "Premakni izbrane naloge proti dnu"
+msgstr "Premakni izbrano celico navzdol"
 
 #: ../beast-gtk/bstpatternctrl.c:317
 msgid "Move focus cell upwards page-wise"
-msgstr ""
+msgstr "Premakne izbrano celico navzgor glede na stran"
 
 #: ../beast-gtk/bstpatternctrl.c:318
 msgid "Move focus cell to the left page-wise"
-msgstr ""
+msgstr "Premakne izbrano celico levo glede na stran"
 
 #: ../beast-gtk/bstpatternctrl.c:319
 msgid "Move focus cell to the right page-wise"
-msgstr ""
+msgstr "Premakne izbrano celico desno glede na stran"
 
 #: ../beast-gtk/bstpatternctrl.c:320
 msgid "Move focus cell downwards page-wise"
-msgstr ""
+msgstr "Premakne izbrano celico navzdol glede na stran"
 
 #: ../beast-gtk/bstpatternctrl.c:321
 msgid "Set the focus cell to the topmost position possible"
@@ -1473,23 +1468,21 @@ msgstr "Sprememba oktave basa za dano količino"
 
 #: ../beast-gtk/bstpatternctrl.c:338
 msgid "Change the numeric focus cell contents (e.g. octave) by a given amount"
-msgstr ""
+msgstr "Spremeni vsebino številčne izbrane celice (to je oktavo) za dano količino"
 
 #: ../beast-gtk/bstpatternctrl.c:342
-#, fuzzy
 msgid "Set the focus cell octave"
-msgstr "Nastavitev celice stanja ni uspela: %s."
+msgstr "Nastavi oktavo izbrane celice"
 
 #: ../beast-gtk/bstpatternctrl.c:346
 #: ../beast-gtk/bstpatternctrl.c:360
 msgid "Remove any events in the focus cell"
-msgstr ""
+msgstr "Odstrani morebitne dogodke v izbrani celici"
 
 #: ../beast-gtk/bstpatternctrl.c:350
 #: ../beast-gtk/bstpatternctrl.c:364
-#, fuzzy
 msgid "Set the focus cell note"
-msgstr "Nastavitev celice stanja ni uspela: %s."
+msgstr "Nastavi noto  izbrane celice"
 
 #: ../beast-gtk/bstpatternctrl.c:354
 #: ../beast-gtk/bstpatternctrl.c:368
@@ -1616,7 +1609,7 @@ msgstr "Q: Takt"
 #: ../beast-gtk/bstpianorollctrl.c:125
 #: ../beast-gtk/bsttrackrollctrl.c:80
 msgid "Quantize to tact boundaries"
-msgstr ""
+msgstr "Kvantiziraj ne meje takta"
 
 #: ../beast-gtk/bstpianorollctrl.c:127
 #: ../beast-gtk/bsttrackrollctrl.c:82
@@ -1631,42 +1624,42 @@ msgstr "Kvantizacija ni izbrana"
 #: ../beast-gtk/bstpianorollctrl.c:129
 #: ../beast-gtk/bsttrackrollctrl.c:84
 msgid "Q: 1\\/1"
-msgstr ""
+msgstr "K: 1\\/1"
 
 #: ../beast-gtk/bstpianorollctrl.c:129
 #: ../beast-gtk/bsttrackrollctrl.c:84
 msgid "Quantize to whole note boundaries"
-msgstr ""
+msgstr "Kvantiziraj na meje celinke"
 
 #: ../beast-gtk/bstpianorollctrl.c:131
 #: ../beast-gtk/bsttrackrollctrl.c:86
 msgid "Q: 1\\/2"
-msgstr ""
+msgstr "K: 1\\/2"
 
 #: ../beast-gtk/bstpianorollctrl.c:131
 #: ../beast-gtk/bsttrackrollctrl.c:86
 msgid "Quantize to half note boundaries"
-msgstr ""
+msgstr "Kvantiziraj na meje polovinke"
 
 #: ../beast-gtk/bstpianorollctrl.c:133
 #: ../beast-gtk/bsttrackrollctrl.c:88
 msgid "Q: 1\\/4"
-msgstr ""
+msgstr "K: 1\\/4"
 
 #: ../beast-gtk/bstpianorollctrl.c:133
 #: ../beast-gtk/bsttrackrollctrl.c:88
 msgid "Quantize to quarter note boundaries"
-msgstr ""
+msgstr "Kvantiziraj na meje četrtinke"
 
 #: ../beast-gtk/bstpianorollctrl.c:135
 #: ../beast-gtk/bsttrackrollctrl.c:90
 msgid "Q: 1\\/8"
-msgstr ""
+msgstr "K: 1\\/8"
 
 #: ../beast-gtk/bstpianorollctrl.c:135
 #: ../beast-gtk/bsttrackrollctrl.c:90
 msgid "Quantize to eighths note boundaries"
-msgstr ""
+msgstr "Kvantiziraj na meje osminke"
 
 #: ../beast-gtk/bstpianorollctrl.c:137
 #: ../beast-gtk/bsttrackrollctrl.c:92
@@ -1676,7 +1669,7 @@ msgstr "K: 1\\/16"
 #: ../beast-gtk/bstpianorollctrl.c:137
 #: ../beast-gtk/bsttrackrollctrl.c:92
 msgid "Quantize to sixteenth note boundaries"
-msgstr ""
+msgstr "Kvantiziraj na meje šestnajstinke"
 
 #: ../beast-gtk/bstpianorollctrl.c:139
 #: ../beast-gtk/bsttrackrollctrl.c:94
@@ -1686,7 +1679,7 @@ msgstr "K: 1\\/32"
 #: ../beast-gtk/bstpianorollctrl.c:139
 #: ../beast-gtk/bsttrackrollctrl.c:94
 msgid "Quantize to thirty-second note boundaries"
-msgstr ""
+msgstr "Kvantiziraj na meje dvaintridesetinke"
 
 #: ../beast-gtk/bstpianorollctrl.c:141
 #: ../beast-gtk/bsttrackrollctrl.c:96
@@ -1696,7 +1689,7 @@ msgstr "K: 1\\/64"
 #: ../beast-gtk/bstpianorollctrl.c:141
 #: ../beast-gtk/bsttrackrollctrl.c:96
 msgid "Quantize to sixty-fourth note boundaries"
-msgstr ""
+msgstr "Kvantiziraj na meje štiriinšestdesetnike"
 
 #: ../beast-gtk/bstpianorollctrl.c:143
 #: ../beast-gtk/bsttrackrollctrl.c:98
@@ -1706,7 +1699,7 @@ msgstr "K: 1\\/128"
 #: ../beast-gtk/bstpianorollctrl.c:143
 #: ../beast-gtk/bsttrackrollctrl.c:98
 msgid "Quantize to hundred twenty-eighth note boundaries"
-msgstr ""
+msgstr "Kvantiziraj na meje stoosemindvajsetinke"
 
 #: ../beast-gtk/bstpianorollctrl.c:572
 #: ../beast-gtk/bstpianorollctrl.c:579
@@ -4997,7 +4990,7 @@ msgstr "Prednost"
 
 #: ../bse/bsecore.idl:751
 msgid "The nice value of a thread, -20 indicates a high priority thread and +19 a low priority one that is 'nice' to others"
-msgstr ""
+msgstr "Ocena prednosti delovanja niza, -20 pomeni niz z visoko prednosti, +19 pa pomeni niz z nizko prednostjo"
 
 #: ../bse/bsecore.idl:754
 msgid "Processor"
@@ -5788,7 +5781,6 @@ msgstr "NAPRAVA,NAČIN"
 
 #. TRANSLATORS: keep this text to 70 chars in width
 #: ../bse/bsepcmdevice-oss.c:648
-#, fuzzy
 msgid ""
 "Open Sound System PCM driver:\n"
 "  DEVICE - PCM device file name\n"
@@ -5800,7 +5792,7 @@ msgstr ""
 "  DEVICE - ime datoteke PCM naprave\n"
 "  MODE   - lahko vsebuje \"rw\", \"ro\" ali \"wo\" za\n"
 "          le za branje, branje-pisanje, dostop le za pisanje;\n"
-"          dodajanje \"hs\" prisili trdo usklajevanje ob ???? \n"
+"          dodajanje \"hs\" prisili trdo usklajevanje ob praznjenju medpomnilnika\n"
 
 #: ../bse/bsepcminput.c:84
 msgid "/Input & Output/PCM Input"
@@ -5852,7 +5844,6 @@ msgid "No available audio device was found."
 msgstr "Ni mogoče najti razpoložljive zvočne naprave."
 
 #: ../bse/bseserver.c:532
-#, fuzzy
 msgid "No available audio device could be found and opened successfully. Sorry, no fallback selection can be made for audio devices, giving up."
 msgstr "Ni mogoče najti in odpreti razpoložljive zvočne naprave. Žal ni zasilne izbire za zvočne naprave, program se bo zaprl."
 
@@ -6328,7 +6319,7 @@ msgstr "Val za uporabo kot instrument"
 #: ../bse/bsetrack.c:1024
 #, fuzzy
 msgid "Max Voixes"
-msgstr "Največ povezav"
+msgstr "Največje število glasov"
 
 #: ../bse/bsetrack.c:1030
 #, fuzzy
@@ -6885,8 +6876,9 @@ msgstr "Obrezna frekvenca filtra"
 
 #: ../plugins/bseiirfilter.c:150
 #: ../plugins/bseiirfilter.c:155
+#, fuzzy
 msgid "Cutoff Frequency 2 (Band Pass/Stop)"
-msgstr ""
+msgstr "Obrezna frekvenca 2 "
 
 #: ../plugins/bseiirfilter.c:152
 msgid "Second filter cutoff frequency"
